--- a/EXPO/package.json
+++ b/EXPO/package.json
@@ -20,6 +20,7 @@
     "rn-placeholder": "^1.3.3"
   },
   "devDependencies": {
+    "babel-install": "2.1.0",
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^32.0.0"
   },
