--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "native-base": "^2.0.1",
     "react": "15.4.2",
-    "react-native": "0.41.0",
+    "react-native": "^0.41.0",
     "react-native-camera": "^0.6.0"
   },
   "devDependencies": {
