--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "native-base": "^2.0.1",
     "react": "15.4.2",
     "react-native": "^0.41.0",
-    "react-native-camera": "^0.6.0"
+    "react-native-camera": "^0.6.0",
+    "react-native-orientation": "^3.1.3"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
