--- a/EXPO/app.json
+++ b/EXPO/app.json
@@ -7,6 +7,7 @@
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "icon": "./assets/images/icon.png",
+    "orientation": "default",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
