--- a/EXPO/package.json
+++ b/EXPO/package.json
@@ -15,7 +15,9 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-android-open-settings": "^1.3.0",
     "react-native-elements": "^1.1.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-permissions": "^1.1.1",
     "react-navigation": "^3.7.1",
     "rn-placeholder": "^1.3.3"
