--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.1'
         implementation project(':react-native-maps')
+        implementation project(':react-native-android-open-settings')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
