--- a/EXPO/package.json
+++ b/EXPO/package.json
@@ -29,6 +29,7 @@
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-permissions": "^1.1.1",
     "react-native-sqlite-storage": "^3.3.10",
+    "react-native-unimodules": "^0.3.1",
     "react-navigation": "^3.7.1",
     "rn-placeholder": "^1.3.3"
   },
