--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "expo-local-authentication": "^5.0.0",
     "expo-location": "^4.0.0",
     "native-base": "^2.0.1",
     "react": "15.4.2",
