--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "15.4.2",
     "react-native": "^0.41.0",
     "react-native-camera": "^0.6.0",
+    "react-native-elements": "^1.1.0",
     "react-native-gps-state": "^2.0.3",
     "react-native-orientation": "^3.1.3",
     "react-native-permissions": "^1.1.1",
