--- a/EXPO/package.json
+++ b/EXPO/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "expo-sqlite": "^6.0.0",
+    "expo-sqlite-orm": "^1.5.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.0.9"
